--- a/Airelogic.ArtistData/Airelogic.ArtistData.csproj
+++ b/Airelogic.ArtistData/Airelogic.ArtistData.csproj
@@ -6,12 +6,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.7" />
     <PackageReference Include="newtonsoft.json" Version="12.0.3" />
+    <PackageReference Include="serilog.extensions.hosting" Version="3.1.0" />
+    <PackageReference Include="serilog.settings.configuration" Version="3.1.0" />
+    <PackageReference Include="serilog.sinks.console" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AireLogic.MusixMatch\AireLogic.MusixMatch.csproj" />
     <ProjectReference Include="..\AireLogic.ApiSeed\AireLogic.ApiSeed.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
