--- a/AireLogic.ArtistData.Test/AireLogic.ArtistData.Test.csproj
+++ b/AireLogic.ArtistData.Test/AireLogic.ArtistData.Test.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="Moq" Version="4.14.5" />
+    <PackageReference Include="moq" Version="4.14.5" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
@@ -17,8 +17,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AireLogic.ArtistData\Airelogic.ArtistData.csproj" />
-    <ProjectReference Include="..\AireLogic.ApiSeed\AireLogic.ApiSeed.csproj" />
-    <ProjectReference Include="..\AireLogic.MusixMatch\AireLogic.MusixMatch.csproj" />
   </ItemGroup>
 
 </Project>
